Fix issue where content was being cut off on mobile horizontal orientation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,12 +8,12 @@
 }
 
 html {
-    height: 100%;
+    min-height: 100%;
 }
 
 body {
     font-family: "Chewy", sans-serif;
-    height: 100%;
+    min-height: 100%;
 }
 
 a {
